[package]
name = "roz"
description = "Ollama CLI interface"
authors = ["Luis Felipe Domínguez Vega <ldominguezvega@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lfdominguez/roz"
repository = "https://github.com/lfdominguez/roz"
keywords = ["ollama", "llama", "ia", "git", "commit"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

exclude = [
    "flake*",
]

[dependencies]
git2 = "0.18.2"
ollama-rs = { version = "0.1.6", features = ["stream", "rustls"] }
clap = { version = "4.5.0", features = ["derive"] }
clap_derive = "4.5.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"

[profile.release]
opt-level = 's'  # Optimize for speed.
lto = true
codegen-units = 1
panic = 'abort'
